[package]
name = "webserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.7"
reqwest = { version = "0.12.7", features = ["json"] }
tokio-postgres = "0.7.12"
anyhow = "1.0.89"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }